array.island.Island.scala.error
Erreur de compilation :
Island:10: error: not found: value x
  for (i <- 1 to (x-1)){
                  ^